# sparkle-duck

./: .cursorignore  .gitignore  .gitmodules  README.md
test-lvgl/: .clang-format  .gitignore  1  CLAUDE.md  CMakeLists.txt  GridMechanics.md  Makefile  README.md  SETUP_IMPROVEMENTS.md  analyze_swaps.sh  benchmark-logging-config.json  build.sh  build_debug.sh  build_release.sh  compile_commands.json  config.h  config.h.in  debug_latest_crash.sh  deploy-local.sh  deploy-to-pi.sh  foo  foo2  format.sh  go.sh  gradient_test_output.txt  log.txt  logging-config.json  lv_conf.h  measure_world_size.cpp  run.sh  run_debug.sh  run_main.sh  run_optimized.sh  run_tests.sh  run_visual_tests.sh  simple_reset_test.cpp  test-lvgl.cpp  test.sh  test_elasticity.sh  test_output.txt  (+6 more)
test-lvgl/config/pi/: README.md  install.sh  sparkle-duck.desktop
test-lvgl/config/pi/kanshi/: config
test-lvgl/config/pi/labwc/: autostart  rc.xml
test-lvgl/config/pi/libfm/: libfm.conf
test-lvgl/design_docs/: GridMechanics.md  JSON-Serialization-Test-Plan.md  MaterialPicker-UI-Design.md  WebRTC-test-driver.md  WorldB-Development-Plan.md  ai-integration-ideas.md  cell-mass-makes-gravity.md  coding_convention.md  dual-path-event-system.md  its_adhesion_cohesion_time.md  logging-channels.md  optimization-ideas.md  organism-structural-integrity.md  organism-support-design.md  parallelization-analysis.md  phase0-push-update-analysis.md  plant.md  plantA.md  rigid-body-design.md  runtime_api_design.md  scenario-switcher.md  server-side-rendering.md  sim-ui-refactor.md  ui_layout.md  ui_overview.md  under-pressure.md  under_pressure.md  visual_test_framework.md  web-rtc-interactivity.md  websocket-client-library.md
test-lvgl/hooks/: install-hooks.sh  pre-commit
test-lvgl/scripts/: deploy_pi.sh  gen_wl_protocols.sh  setup_dependencies.sh
test-lvgl/src/: ApiCommands.h  Cell.cpp  Cell.h  CellB.cpp  CellB.h  CellInterface.h  CommandWithCallback.h  CrashDumpHandler.cpp  CrashDumpHandler.h  DirtSimStateMachine.cpp  DirtSimStateMachine.h  Event.h  EventDispatcher.h  EventProcessor.cpp  EventProcessor.h  EventRouter.cpp  EventRouter.h  EventTraits.h  LvglEventFactory.h  MaterialMove.h  MaterialPicker.cpp  MaterialPicker.h  MaterialType.cpp  MaterialType.h  Result.h  RulesBNew.cpp  RulesBNew.h  ScopeTimer.h  SharedSimState.h  SimulationManager.cpp  SimulationManager.h  SimulationStats.h  SimulatorUI.cpp  SimulatorUI.h  SparkleAssert.h  StateMachineInterface.h  SynchronizedQueue.h  Timers.cpp  Timers.h  UIManager.cpp  (+57 more)
test-lvgl/src/cli/: BenchmarkRunner.cpp  BenchmarkRunner.h  CleanupRunner.cpp  CleanupRunner.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandRegistry.h  IntegrationTest.cpp  IntegrationTest.h  README.md  RunAllRunner.cpp  RunAllRunner.h  SubprocessManager.cpp  SubprocessManager.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp  test_command_registry.cpp
test-lvgl/src/core/: Cell.cpp  Cell.h  CellDebug.h  CellInterface.h  CommandWithCallback.h  CrashDumpHandler.cpp  CrashDumpHandler.h  EventDispatcher.h  EventSink.h  GridOfCells.cpp  GridOfCells.h  LoggingChannels.cpp  LoggingChannels.h  MaterialMove.h  MaterialType.cpp  MaterialType.h  MsgPackAdapter.h  PhysicsSettings.cpp  PhysicsSettings.h  Pimpl.h  ReflectSerializer.h  RenderMessage.h  RenderMessageUtils.h  Result.h  ScenarioConfig.h  SharedSimState.h  SparkleAssert.h  StateMachineBase.cpp  StateMachineBase.h  StateMachineInterface.h  SynchronizedQueue.h  Timers.cpp  Timers.h  Vector2.h  Vector2d.cpp  Vector2d.h  Vector2i.cpp  Vector2i.h  World.cpp  World.h  (+30 more)
test-lvgl/src/core/api/: UiUpdateEvent.h
test-lvgl/src/core/bitmaps/: CellBitmap.cpp  CellBitmap.h  EmptyNeighborhood.cpp  EmptyNeighborhood.h  MaterialNeighborhood.cpp  MaterialNeighborhood.h  Neighborhood3x3.h
test-lvgl/src/core/network/: BinaryProtocol.h  WebSocketClient.cpp  (+3 more)
test-lvgl/src/lib/: backends.h  driver_backends.cpp  driver_backends.h  simulator_loop.h  simulator_settings.h
test-lvgl/src/network/: CommandProcessor.cpp  CommandProcessor.h  CommandResult.h  ResponseSerializerJson.h  WebSocketServer.cpp  WebSocketServer.h
test-lvgl/src/scenarios/: Scenario.h  ScenarioWorldEventGenerator.h  ScenarioWorldSetup.cpp  ScenarioWorldSetup.h
test-lvgl/src/server/: Event.h  EventProcessor.cpp  EventProcessor.h  StateMachine.cpp  StateMachine.h  main.cpp  main_server.cpp
test-lvgl/src/states/: Config.cpp  MainMenu.cpp  Shutdown.cpp  SimPaused.cpp  SimRunning.cpp  Startup.cpp  State.h
test-lvgl/src/tests/: AirResistanceVisual_test.cpp  AirResistance_test.cpp  BinaryProtocol_test.cpp  BresenhamLine_test.cpp  Buoyancy_test.cpp  ButtonEvent_test.cpp  COMCohesionForce_test.cpp  CacheCorrectness_test.cpp  CellJSON_test.cpp  Cell_serialization_test.cpp  CohesionDebug_test.cpp  CollisionSystem_test.cpp  CommandProcessor_test.cpp  CrashDumpHandler_test.cpp  DensityMechanics_test.cpp  DiagonalWaterLeveling_test.cpp  DirtSimStateMachine_test.cpp  DistanceToSupport_test.cpp  DualPathRoutingTests.cpp  EventClassification_test.cpp  ForceCalculation_test.cpp  ForceDebug_test.cpp  ForceInfluencedMovement_test.cpp  ForcePhysicsIntegration_test.cpp  HorizontalLineStability_test.cpp  HorizontalMomentum_test.cpp  IntegrationTests.cpp  InterfaceCompatibility_test.cpp  LVGLTestBase.h  LVGLTimer_test.cpp  MassBasedCohesion_test.cpp  MaterialTypeJSON_test.cpp  Pimpl_test.cpp  PressureClassicFlow_test.cpp  PressureDynamic_test.cpp  PressureHydrostatic_test.cpp  PressureIntegration_test.cpp  PressureSimple_test.cpp  PressureSystemUI_test.cpp  PressureSystemVisual_test.cpp  (+38 more)
test-lvgl/src/ui/: DisplayCapture.cpp  DisplayCapture.h  EventProcessor.cpp  EventProcessor.h  LVGLBuilder.cpp  LVGLBuilder.h  LVGLEventBuilder.cpp  LVGLEventBuilder.h  MaterialPicker.cpp  MaterialPicker.h  SimPlayground.cpp  SimPlayground.h  SimulatorUI.cpp  SimulatorUI.h  StateMachine.cpp  StateMachine.h  UIUpdateConsumer.h  UiComponentManager.cpp  UiComponentManager.h  main.cpp
test-lvgl/test/: TimersTest.cpp
test-lvgl/tests/: CrashDumpHandler_test.cpp  MaterialTypeJSON_test.cpp  ResultTest.cpp  WorldStateJSON_test.cpp
(+254 files in other folders)
